# reshape

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: images.py
app/core/: config.py
app/crud/: __init__.py  crud_image.py  exceptions.py
app/models/: __init__.py  image.py
app/schemas/: __init__.py  image.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_images.py
